Hudi first cut changes